k8s/apps/ytptube/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ytptube
  namespace: ytptube
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "YTPTube"
    gethomepage.dev/description: "YouTube playlist downloader"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "youtube.png"
    gethomepage.dev/href: "https://ytptube.item.fyi"
    gethomepage.dev/siteMonitor: "http://ytptube.ytptube.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=ytptube"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ytptube.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
